force-app/main/default/objects/SFDC_Applicant__c/SFDC_Applicant__c.object-meta.xml
<CustomObject>
    <description>Job Applicant</description>
    <label>Applicant</label>
    <nameField>
        <label>Applicant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applicants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>