force-app/main/default/objects/SFDC_Applicant__c/fields/Applicant_Education__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Education__c</fullName>
    <label>Applicant Education</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High School</fullName>
            </value>
            <value>
                <fullName>Technical Training</fullName>
            </value>
            <value>
                <fullName>Degree in Progress - BS</fullName>
            </value>
            <value>
                <fullName>Degree in Progress - MS</fullName>
            </value>
            <value>
                <fullName>2 year college</fullName>
            </value>
            <value>
                <fullName>4 year college</fullName>
            </value>
            <value>
                <fullName>Masters</fullName>
            </value>
            <value>
                <fullName>Doctorate</fullName>
            </value>
            <value>
                <fullName>Professional (MD, JD, CPA)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>