force-app/main/default/objects/SFDC_Applicant__c/fields/Applicant_Gender__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Gender__c</fullName>
    <label>Applicant Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>