force-app/main/default/objects/SFDC_Applicant__c/fields/Applicant_Job_Codes__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Job_Codes__c</fullName>
    <label>Applicant Job Codes</label>
    <length>80</length>
    <type>Text</type>
</CustomField>