force-app/main/default/objects/SFDC_Applicant__c/fields/Applicant_Keywords__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Keywords__c</fullName>
    <label>Applicant Keywords</label>
    <type>TextArea</type>
</CustomField>