force-app/main/default/objects/SFDC_Applicant__c/fields/Applicant_Preferred_Phone__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Preferred_Phone__c</fullName>
    <label>Applicant Preferred Phone</label>
    <type>Phone</type>
</CustomField>