force-app/main/default/objects/SFDC_Applicant__c/fields/Applicant_Source__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Source__c</fullName>
    <label>Applicant Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DICE</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Employee Referral</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Hotjobs</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Job Fair</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Monster.com</fullName>
            </value>
            <value>
                <fullName>Oracle Alumni Posting</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PSFT Alumni Posting</fullName>
            </value>
            <value>
                <fullName>Purchased Research</fullName>
            </value>
            <value>
                <fullName>Recruiting Firm</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Tradeshow</fullName>
            </value>
            <value>
                <fullName>Workopolis.com</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>