force-app/main/default/objects/SFDC_Applicant__c/fields/Applicant_Status__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Status__c</fullName>
    <label>Applicant Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Resubmitted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Review - Hiring Manager</fullName>
            </value>
            <value>
                <fullName>Send Rejection</fullName>
            </value>
            <value>
                <fullName>No Position</fullName>
            </value>
            <value>
                <fullName>Send No Position</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Consider for future positions</fullName>
            </value>
            <value>
                <fullName>Send Position Filled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>