force-app/main/default/objects/SFDC_Applicant__c/fields/Applicant_Travel_Time__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Travel_Time__c</fullName>
    <label>Applicant Travel Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>25%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>75%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>