force-app/main/default/objects/SFDC_Applicant__c/fields/Applicant_US_Work_authorization__c.field-meta.xml
<CustomField>
    <fullName>Applicant_US_Work_authorization__c</fullName>
    <label>Applicant US Work authorization</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>