force-app/main/default/objects/SFDC_Applicant__c/fields/Assigned_to__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N30000001WXBcEAO</relationshipName>
    <type>Lookup</type>
</CustomField>