force-app/main/default/objects/SFDC_Applicant__c/fields/Date_Resume_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Resume_Submitted__c</fullName>
    <label>Date Resume Submitted</label>
    <type>Date</type>
</CustomField>