force-app/main/default/objects/SFDC_Applicant__c/fields/Referral_Fit__c.field-meta.xml
<CustomField>
    <fullName>Referral_Fit__c</fullName>
    <label>Referral Fit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-Low</fullName>
            </value>
            <value>
                <fullName>2-</fullName>
            </value>
            <value>
                <fullName>3-Neutral</fullName>
            </value>
            <value>
                <fullName>4-</fullName>
            </value>
            <value>
                <fullName>5-High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>