force-app/main/default/objects/SFDC_Applicant__c/fields/Referring_Employee__c.field-meta.xml
<CustomField>
    <fullName>Referring_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referring Employee</label>
    <referenceTo>SFDC_Referring_Employee__c</referenceTo>
    <relationshipLabel>Applicants</relationshipLabel>
    <relationshipName>R00N30000001WXBdEAO</relationshipName>
    <type>Lookup</type>
</CustomField>