force-app/main/default/objects/SFDC_Applicant__c/fields/Referring_Employee_Comments__c.field-meta.xml
<CustomField>
    <fullName>Referring_Employee_Comments__c</fullName>
    <label>Referring Employee Comments</label>
    <type>TextArea</type>
</CustomField>