force-app/main/default/objects/SFDC_Applicant__c/fields/Referring_Employee_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Referring_Employee_Relationship__c</fullName>
    <label>Referring Employee Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Relative</fullName>
            </value>
            <value>
                <fullName>Business contact</fullName>
            </value>
            <value>
                <fullName>Former co-worker</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>