force-app/main/default/objects/SFDC_Applicant__c/fields/Salary_Information__c.field-meta.xml
<CustomField>
    <fullName>Salary_Information__c</fullName>
    <label>Salary Information</label>
    <type>TextArea</type>
</CustomField>