force-app/main/default/objects/SFDC_Applicant__c/fields/SFDC_Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Applicant_Name__c</fullName>
    <label>Applicant Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>