force-app/main/default/objects/SFDC_Applicant__c/fields/Site_Location__c.field-meta.xml
<CustomField>
    <fullName>Site_Location__c</fullName>
    <label>Site Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Research &amp; Development</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Product Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>