force-app/main/default/objects/SFDC_Applicant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Applicant_Status__c</columns>
    <columns>Applicant_Email__c</columns>
    <columns>Applicant_Preferred_Phone__c</columns>
    <columns>Applicant_Source__c</columns>
    <columns>Date_Resume_Submitted__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>